# jamba-sample-gain

./: CMakeLists.txt  README.md  build-prod.bat  build-prod.sh  configure.py  fetch_jamba.cmake  jamba-download.cmake.in  jamba.cmake
.github/workflows/: run-tests-macos-action.yml  run-tests-windows-action.yml
archive/: README-macOS_64bits.txt  README-win_64bits.txt
audio-unit/: audiounitconfig.h
mac/: Info.plist
resource/: JSGain.rc  JSGain.uidesc
src/cpp/: JSGainCIDs.h  JSGainModel.cpp  JSGainModel.h  JSGainPlugin.h  JSGainVST2.cpp  JSGainVST3.cpp  version.h.in
src/cpp/GUI/: JSGainController.cpp  JSGainController.h  JSGainSendMessageView.cpp  JSGainSendMessageView.h  JSGainStatsView.cpp  JSGainStatsView.h  LinkedSliderView.cpp  LinkedSliderView.h
src/cpp/RT/: JSGainProcessor.cpp  JSGainProcessor.h
test/cpp/: test-JSGain.cpp
workflows/: run-tests-macos-action.yml
